Refactor hardcodded environment stuff

--- a/notebooks/lunar-landing.ipynb
+++ b/notebooks/lunar-landing.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "import gym\n",
     "import numpy as np\n",
-    "from reinforcement_learning.reinforce import LunarModule, ReinforceTrainer\n",
+    "from reinforcement_learning.reinforce import MLPReinforceModel, ReinforceTrainer\n",
     "from reinforcement_learning.reinforce_with_advantage import LunarValueModule, ReinforceWithAdvantageTrainer\n",
     "from reinforcement_learning.q_learning import QModule, QLearningTrainer\n",
     "from reinforcement_learning.curious_learner import (\n",
@@ -56,7 +56,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env.action_space.n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +85,7 @@
        "Box(8,)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,11 +96,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "actor = LunarModule()\n",
+    "# actor = MLPReinforceModel(env, 48)\n",
+    "actor = QModule(env, 48)\n",
     "# value = LunarValueModule()\n",
     "curious_model_family = CuriousModelFamily(\n",
     "    forward_model=LunarForwardModel(32),\n",
@@ -102,29 +123,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer = QLearningTrainer(\n",
+    "    env, actor, exploration_prob=0.25, reward_discount=0.95, target_agent=QModule(env, 48))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "e:\\programs\\programming\\conda\\envs\\pth-rl\\lib\\site-packages\\torch\\nn\\modules\\container.py:92: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
-      "  input = module(input)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-133.9326842269615 -32.21947479248047\n",
-      "-193.60592278292665 7.446215629577637\n",
-      "-130.79256903252474 -31.112022399902344\n",
-      "-187.27170446635876 -4.37158203125\n",
-      "-68.45054976991322 1.7701245546340942\n",
-      "15.70749627171494 2.4997644424438477\n"
+      "-116.88062020140816 0.0\n",
+      "-676.259026615158 -36.78070831298828\n",
+      "-138.63014465038083 -15.492352485656738\n",
+      "-131.76474650204133 -8.761861801147461\n",
+      "-139.45271094856307 -11.48775863647461\n",
+      "-143.04799455616126 -12.637648582458496\n"
      ]
     }
    ],
