Finish the refactoring

--- a/notebooks/lunar-landing.ipynb
+++ b/notebooks/lunar-landing.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -96,17 +96,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# actor = MLPReinforceModel(env, 48)\n",
-    "actor = QModule(env, 48)\n",
+    "actor = MLPReinforceModel(env, 48)\n",
+    "# actor = QModule(env, 48)\n",
     "# value = LunarValueModule()\n",
     "curious_model_family = CuriousModelFamily(\n",
-    "    forward_model=LunarForwardModel(32),\n",
-    "    inverse_model=LunarInverseModel(32),\n",
-    "    embedder=lunar_embedder(32))"
+    "    forward_model=LunarForwardModel(env, 32),\n",
+    "    inverse_model=LunarInverseModel(env, 32),\n",
+    "    embedder=lunar_embedder(env, 32))"
    ]
   },
   {
@@ -123,12 +123,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainer = QLearningTrainer(\n",
-    "    env, actor, exploration_prob=0.25, reward_discount=0.95, target_agent=QModule(env, 48))"
+    "# trainer = QLearningTrainer(\n",
+    "#     env, actor, exploration_prob=0.25, reward_discount=0.95, target_agent=QModule(env, 48))"
    ]
   },
   {
@@ -139,15 +139,23 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "e:\\programs\\programming\\conda\\envs\\pth-rl\\lib\\site-packages\\torch\\nn\\modules\\container.py:92: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+      "  input = module(input)\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-116.88062020140816 0.0\n",
-      "-676.259026615158 -36.78070831298828\n",
-      "-138.63014465038083 -15.492352485656738\n",
-      "-131.76474650204133 -8.761861801147461\n",
-      "-139.45271094856307 -11.48775863647461\n",
-      "-143.04799455616126 -12.637648582458496\n"
+      "-106.8834366565998 -41.01100540161133\n",
+      "-277.2093270343265 -32.6273193359375\n",
+      "-185.1133253860023 -48.387916564941406\n",
+      "-157.226560210029 -29.715503692626953\n",
+      "-137.93533924837269 -17.586349487304688\n",
+      "-64.20060294331249 0.8271666169166565\n"
      ]
     }
    ],
@@ -175,13 +183,6 @@
    "source": [
     "%debug\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
