Add batchd training

--- a/notebooks/lunar-landing.ipynb
+++ b/notebooks/lunar-landing.ipynb
@@ -28,13 +28,17 @@
    "source": [
     "import gym\n",
     "import numpy as np\n",
-    "from reinforcement_learning.reinforce import MLPReinforceModel, ReinforceTrainer\n",
-    "from reinforcement_learning.reinforce_with_advantage import MLPValueModule, ReinforceWithAdvantageTrainer\n",
+    "from reinforcement_learning.reinforce import (\n",
+    "    MLPReinforceModel, ReinforceTrainer, BasicPPO)\n",
+    "from reinforcement_learning.advantage import (\n",
+    "    MLPValueModule, AdvantageMixin)\n",
     "from reinforcement_learning.q_learning import QLearningTrainer\n",
     "from reinforcement_learning.curious_learner import (\n",
     "    ReinforceCuriousLearner, CuriousModelFamily,\n",
     "    lunar_embedder, LunarForwardModel, LunarInverseModel)\n",
-    "from reinforcement_learning.ddpg import DDPGTrainer, BoxQModule"
+    "from reinforcement_learning.ddpg import DDPGTrainer, BoxQModule\n",
+    "from reinforcement_learning.replay_buffer_trainer import (\n",
+    "    ReplayBufferedTrainerMixin, BatchedTrainerMixin)"
    ]
   },
   {
@@ -81,12 +85,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "actor = MLPReinforceModel(env, 48)\n",
-    "target_actor = MLPReinforceModel(env, 48)\n",
-    "# actor = QModule(env, 48)\n",
-    "# value = MLPValueModule(env, 48)\n",
-    "q_function = BoxQModule(env, 48)\n",
-    "target_q = BoxQModule(env, 48)\n",
+    "actor = MLPReinforceModel(env, 64)\n",
+    "# target_actor = MLPReinforceModel(env, 48)\n",
+    "# actor = QModule(env, 64)\n",
+    "value = MLPValueModule(env, 48)\n",
+    "# q_function = BoxQModule(env, 48)\n",
+    "# target_q = BoxQModule(env, 48)\n",
     "# curious_model_family = CuriousModelFamily(\n",
     "#     forward_model=LunarForwardModel(env, 32),\n",
     "#     inverse_model=LunarInverseModel(env, 32),\n",
@@ -99,10 +103,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# trainer = ReinforceWithAdvantageTrainer(\n",
-    "#     #curious_model_family,\n",
-    "#     env=env, agent=actor, value_module=value, exploration_prob=0.0, \n",
-    "#     should_render=False, reward_discount=0.95)"
+    "trainer_class = type(\n",
+    "    'CurrentTrainer', (BatchedTrainerMixin, AdvantageMixin, BasicPPO), {})"
    ]
   },
   {
@@ -111,11 +113,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainer = DDPGTrainer(\n",
+    "trainer = trainer_class(\n",
+    "#     replay_buffer_max_size=10000, batch_size=64,\n",
+    "    num_steps_per_batch=4000,\n",
+    "    num_episodes_in_batch=10,\n",
+    "    num_trainings_per_batch=80,\n",
+    "    max_episode_length=1000,\n",
     "    #curious_model_family,\n",
-    "    env=env, policy=actor, q_func=q_function, exploration_prob=0.0, \n",
-    "    target_policy=target_actor, target_q=target_q,\n",
-    "    should_render=False, reward_discount=0, ddpg_reward_discount=0.99)"
+    "    ppo_clip_ratio=0.15,\n",
+    "    env=env, agent=actor, value_module=value, exploration_prob=0.0, \n",
+    "    should_render=False, reward_discount=0.95)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# trainer = DDPGTrainer(\n",
+    "#     #curious_model_family,\n",
+    "#     env=env, policy=actor, q_func=q_function, exploration_prob=1.0, \n",
+    "#     target_policy=target_actor, target_q=target_q,\n",
+    "#     should_render=False, reward_discount=0, ddpg_reward_discount=0.99)"
    ]
   },
   {
@@ -136,21 +156,158 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "..\\reinforcement_learning\\replay_buffer_trainer.py:41: UserWarning: Batched training\n",
+      "  warn('Batched training')\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-321.63165594796817 0\n",
-      "-299.54754431063475 0\n",
-      "-209.21567173087107 0\n",
-      "-317.5073574962394 0\n",
-      "-292.7377670905152 0\n",
-      "-230.0504942539296 0\n",
-      "-347.79260185935686 0\n",
-      "-169.48682569956466 0\n",
-      "-253.66377421682228 0\n",
-      "-283.4369254626321 0\n",
-      "-223.60698589900923 0\n",
-      "-108.57468501107918 0\n"
+      "0.28317522005460205 [0.5 0.5]\n",
+      "training!\n",
+      "training!\n",
+      "-180.03396500422193 [0.5051078 0.5059725]\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "-138.93772276408288 [0.50464624 0.503352  ]\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "-149.79275656516177 [0.497083   0.49841264]\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "-72.30176579882864 [0.4877242 0.4967803]\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "-62.684775693242585 [0.46635404 0.48355836]\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "11.84860678117956 [0.4303458  0.46464378]\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "17.390173760119097 [0.40214825 0.43464178]\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "-24.642230443392606 [0.38141447 0.41513819]\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "-6.950591591411219 [0.35169825 0.38658452]\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "-110.65284661969417 [0.34327298 0.36283338]\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n",
+      "training!\n"
      ]
     }
    ],
@@ -160,14 +317,32 @@
     "for i in range(30000):\n",
     "    if (i % 25) == 0:\n",
     "        trainer.should_render = True\n",
+    "#     if i == 500:\n",
+    "#         trainer.exploration_prob = 0.05\n",
+    "#         print('Not fully random anymore')\n",
+    "#     if i == 1000:\n",
+    "#         trainer.exploration_prob = 0.0\n",
+    "#         print('No more rand')\n",
+    "#     if i % 1000 == 999:\n",
+    "#         trainer.box_action_std *= 0.5\n",
+    "#         print('Lowering box_action_std to', trainer.box_action_std)\n",
     "    reward, loss = trainer.train_one_episode()\n",
     "    trainer.should_render = False\n",
     "    rewards.append(reward)\n",
     "    losses.append(loss)\n",
     "    if (i % 100) == 0:\n",
-    "        print(np.mean(rewards), loss)\n",
+    "        print(np.mean(rewards), trainer.box_action_std)\n",
     "        rewards = []\n",
     "        losses = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = list(range(10))"
    ]
   },
   {
